k8s/app/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: abb
  labels:
    app.kubernetes.io/part-of: abb-limit-module
